# chiventure

./: .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  FindCriterion.cmake  FindEspeak.cmake  FindJSON-C.cmake  FindLibYAML.cmake  FindLibZIP.cmake  FindProtobuf-c.cmake  Findraylib.cmake  Makefile  README.md  WDL_README.md  cmake_install.cmake  convotest.c  coordinate.h  orb.yaml  test.yaml  ui_debug.txt
src/action_management/: CMakeLists.c  CMakeLists.txt  Makefile  cmake_install.cmake
src/battle/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/checkpointing/: .gitignore  CMakeLists.txt  Makefile  README.md  game.proto
src/cli/: CMakeLists.txt  Makefile  README  README.md  cli.c  cli.h  cmake_install.cmake  cmd.c  cmd.h  operations.c  operations.h  parser.c  shell.c  shell.h
src/common/: CMakeLists.txt  Makefile  cmake_install.cmake
src/custom-actions/: CMakeLists.txt  Makefile  action_block_functions.c  branch_block_functions.c  cmake_install.cmake  sandbox.c  struct.h
src/custom-scripts/: CMakeCache.txt  CMakeLists.txt  Makefile  README  README.md  cmake_install.cmake  custom_types.c
src/game-state/: .gitignore  CMakeLists.txt  Makefile  README.md  READ_ME.md  cmake_install.cmake
src/libobj/: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/npc/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/openworld/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  sample_generation.c
src/playerclass/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/quests/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  quests_state.c
src/skilltrees/: CMakeLists.txt  Makefile  cmake_install.cmake  inventory.c  skill.c  skilltree.c  skilltrees.c  stdst.c
src/sound/: CMakeLists.txt  MAKEFILE  Makefile  README.md  cmake_install.cmake  load_sound.c  sound.c  sound.h
src/ui/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/wdl/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  test_items.c
tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  chiventure  cmake_install.cmake
tests/action_management/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test-action_management  test_action_new_init_free.c  test_condition.c  test_delete_action.c  test_get_actions.c  test_item_actions.c  test_item_item_actions.c  test_npc_actions.c  test_npc_exchange_actions.c  test_npc_item_actions.c  test_path_actions.c
tests/battle/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test-battle  test_AI.c  test_battle_ai.c  test_battle_classes.c  test_battle_common.c  test_battle_common.h  test_battle_default_objects.c  test_battle_flow.c  test_battle_flow_structs.c  test_battle_logic.c  test_battle_move_maker.c  test_battle_moves.c  test_battle_print.c  test_battle_state.c  test_battle_structs.c  test_battle_utility.c  test_logic.c  test_moves.c
tests/checkpointing/: CMakeLists 2.txt  CMakeLists.txt  test_load.c  test_save.c
tests/cli/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test-cli  test_cmd.c  test_game.c  test_operation.c  test_parser.c
tests/custom-actions/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.c  test-custom-actions  test_action_block.c  test_action_block_functions.c  test_ast_block.c  test_ast_block_functions.c  test_attribute_functions.c  test_branch_block.c  test_branch_block_functions.c  test_ca_cond.c  test_ca_effect.c  test_conditional_block.c  test_conditional_block_functions.c  test_control_block.c  test_control_block_functions.c  test_custom_action.c  test_interface.c  test_interface_functions.c  test_struct.c
tests/custom-scripts/: CMakeLists.txt  CTestTestfile.cmake  Makefile  arg_custom_type.h  cmake_install.cmake  get_custom_typ.h  get_custom_type.h  lua_custom_typ.h  lua_custom_type.h  main.c  obj_custom_typ.h  obj_custom_type.h  test-custom-scripts  test_strings.c  test_types.c
tests/game-state/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test-game-state  test_condition.c  test_delete_action.c  test_game.c  test_items.c  test_mode.c  test_npc.c  test_path.c  test_player.c  test_rooms-npc.c  test_rooms.c  test_stats.c
tests/gdl/: test_camera.c
tests/libobj/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.c  test-obj  test_load_json.c  test_load_wdz.c  test_obj.c
tests/npc/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dialogue_sandbox.c  test-npc  test_dialogue.c  test_npc.c  test_npc_battle.c  test_npc_move.c  test_npc_quest.c  test_rooms-npc.c  test_rooms_npc.c  test_wdl_plus.c
tests/openworld/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.c  test-openworld  test_autogenerate.c  test_game_autogenerate.c  test_generation.c  test_items.c  test_rooms.c  test_structs.c
tests/player_stats/: CMakeLists.txt  test_basic.c
tests/playerclass/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test-playerclass  test_class.c  test_class_item.c  test_class_item_restriction.c  test_class_prefabs.c  test_multiclass.c
tests/quests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.c  test-quests  test_prereq.c  test_quest.c  test_quest_hash.c  test_quests_hash.c  test_quests_state.c  test_task.c
tests/skilltrees/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  complex_skill_test.c  effect_t.c  effect_t.h  effect_test.c  inventory_test.c  main.c  reader_test.c  sampleeffects.c  skill_test.c  skilltree_test.c  skilltrees_common_test.c  stdst_test.c  test-skilltrees  test_init.c  test_init.h  test_inventory.c  test_main_functions.c  test_skill.c  test_skilltree.c
tests/sound/: CMakeLists.txt  test_sound.c
tests/ui/: CMakeLists 2.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test-ui  test_coordinate 2.c  test_coordinate.c
tests/wdl/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  (+18 more)
(+1578 files in other folders)
