add_subdirectory(action_management)
add_subdirectory(battle)
add_subdirectory(checkpointing)
add_subdirectory(cli)
add_subdirectory(custom-actions)
add_subdirectory(custom-scripts)
add_subdirectory(game-state)
add_subdirectory(libobj)
add_subdirectory(npc)
add_subdirectory(openworld)
add_subdirectory(playerclass)
add_subdirectory(quests)
add_subdirectory(skilltrees)
add_subdirectory(ui)
add_subdirectory(wdl)
